--- a/fakelabo/labo.html
+++ b/fakelabo/labo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>YOINK</title>
+    <title>YOINNK</title>
 </head>
 <body>
 <p>YEET</p>
