--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="https://noahdejager.github.io/demo/demo.html" class="w3-bar-item w3-button w3-padding-large">Labo 1</a>
+    <a href="https://github.com/NoahDejager/NoahDejager.github.io/blob/main/Labo%201/Labo%201-Noah%20Dejager.pdf" class="w3-bar-item w3-button w3-padding-large">Labo 1</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Labo 2</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Labo 3</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Labo 4</a>
