--- a/Labo 1/Labo1.html
+++ b/Labo 1/Labo1.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Labo1</title>
 </head>
 <body>
+<a></a>
 
 </body>
 </html>
