--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="w3-top">
   <div class="w3-bar w3-cyan w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-cyan" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="https://noahdejager.github.io/demo/demo.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Labo 1</a>
+    <a href="https://github.com/NoahDejager/NoahDejager.github.io/blob/main/Labo%201/Labo%201-Noah%20Dejager.pdf" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Labo 1</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Labo 2</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Labo 3</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Labo 4</a>
