--- a/Labo 3/Labo 3 Opdrachten.html
+++ b/Labo 3/Labo 3 Opdrachten.html
@@ -5,6 +5,17 @@
     <title>Opdrachten Labo 3</title>
 </head>
 <body>
-
+<h1>Opdrachten Labo 3</h1>
+<ul>
+    <li>Opdracht 1</li>
+    <a href="https://noahdejager.github.io/Labo%203/Personal%20Homepage-opdracht.html">Klik hier voor webpagina!</a>
+    <a href="https://github.com/NoahDejager/NoahDejager.github.io/blob/main/Labo%203/Personal%20Homepage-opdracht.html">Klik hier om de code via github te raadplegen!</a>
+    <li>Opdracht 2</li>
+    <a href="https://noahdejager.github.io/Labo%203/Tabel%20contact%20information.html">Klik hier voor webpagina!</a>
+    <a href="https://github.com/NoahDejager/NoahDejager.github.io/blob/main/Labo%203/Personal%20Homepage-opdracht.html">Klik hier om de code via github te raadplegen!</a>
+    <li>Opdracht 3</li>
+    <a href="https://noahdejager.github.io/Labo%203/onderwijsaanbod-opdracht.html">Klik hier voor webpagina!</a>
+    <a href="https://github.com/NoahDejager/NoahDejager.github.io/blob/main/Labo%203/onderwijsaanbod-opdracht.html">Klik hier om de code via github te raadplegen!</a>
+</ul>
 </body>
 </html>
