--- a/Labo 3/onderwijsaanbod-opdracht.html
+++ b/Labo 3/onderwijsaanbod-opdracht.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hogeschool Vives</title>
+    <title>Onderwijsaanbod</title>
 </head>
 <body>
 <h1>Hogeschool Vives</h1>
