--- a/Labo 3/Tabel contact information.html
+++ b/Labo 3/Tabel contact information.html
@@ -1,74 +1,73 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>How to reach</title>
 
 </head>
 <body>
 <h2>How do you reach us?</h2>
-<table border="1">
-  <tr>
-  <th colspan="2">Campus</th>
-  <th>Study Areas</th>
-  <th width="150">Phone number</th>
-  <th width="150">Fax</th>
-  <th>Email</th>
-  <th width="150">Website</th>
-  </tr>
+<table>
   <thead>
+  <tr>
+    <th colspan="2">Campus</th>
+    <th>Study areas</th>
+    <th>Phone number</th>
+    <th>Fax</th>
+    <th>Email</th>
+    <th>Website</th>
+  </tr>
+  </thead>
   <tbody>
   <tr>
-    <td rowspan="4">Kortrijk</td>
-    <td rowspan="4">Doorniksesteenweg 145 8500 Kortrijk</td>
-    <td>Commercial, Sciences, Business Management and Informatics</td>
-    <td>+32 56 26 41 80</td>
-    <td>+32 56 21 58 02</td>
-    <td><a href="mailto:hwb.kortrijk@vives.be">hwb.kortrijk@vives.be</a></td>
-    <td><a href="https://google.com">HW&B</a></td>
+    <th rowspan="4">Kortrijk</th>
+    <th rowspan="4">Doorniksesteenweg 145 8500 Kortrijk</th>
+    <th>Commercial Sciences, Business Management and Informatics</th>
+    <th>+32 56 26 41 80</th>
+    <th>+32 56 21 58 02</th>
+    <th><a href="">hwb.kortrijk@vives.be</a></th>
+    <th><a href="https://www.vives.be/nl/handelswetenschappen-en-bedrijfskunde">HW&B</a></th>
   </tr>
   <tr>
-    <td>Health care</td>
-    <td>+32 56 26 41 10</td>
-    <td>+32 56 26 46 89</td>
-    <td><a href="mailto:gez.kortrijk@vives.be">gez.kortrijk@vives.be</a></td>
-    <td><a href="https://google.com">Gezondheidszorg</a></td>
+    <th>Health care</th>
+    <th>+32 56 26 41 10</th>
+    <th>+32 56 20 46 89</th>
+    <th><a href="">gez.kortrijk@vives.be</a></th>
+    <th><a href="https://www.vives.be/nl/gezondheidszorg">Gezondheidszorg</a></th>
   </tr>
   <tr>
-    <td>Applied Social Studies</td>
-    <td>+32 51 26 41 50</td>
-    <td>+32 51 21 58 03</td>
-    <td><a href="mailto:saw.kortrijk@vives.be">saw.kortrijk@vives.be</a></td>
-    <td><a href="https://google.com">SAW</a></td>
+    <th>Applied Social Studies</th>
+    <th>+32 51 26 41 50</th>
+    <th>+32 21 58 03</th>
+    <th><a href="">saw.kortrijk@vives.be</a></th>
+    <th><a href="https://www.vives.be/nl/sociaal-agogisch-werk">SAW</a></th>
   </tr>
   <tr>
-    <td>Applied Engineering and technology</td>
-    <td>+32 56 50 41 20</td>
-    <td>+32 56 50 98 67</td>
-    <td><a href="mailto:iwt.kortrijk@vives.be">iwt.kortrijk@vives.be</a></td>
-    <td><a href="https://google.com">IW&T</a></td>
+    <th>Applied Engineering and technology</th>
+    <th>+32 56 50 41 20</th>
+    <th>+32 56 50 98 67</th>
+    <th><a href="">iwt.kortrijk@vives.be</a></th>
+    <th><a href="https://www.vives.be/nl/technology">IW&T</a></th>
   </tr>
   <tr>
-    <td>Roeselare</td>
-    <td>Wilgenstraat 32 <br>8800 Roeselare</td>
-    <td>Biotechnology</td>
-    <td>+32 51 23 23 30</td>
-    <td>+32 51 22 82 58</td>
-    <td><a href="mailto:bio.roeselare@vives.be">bio.roeselare@vives.be</a></td>
-    <td><a href="https://google.com">BIO</a></td>
+    <th>Roeselare</th>
+    <th>Wilgenstraat 32 8800 Roeselare</th>
+    <th>Biotechnology</th>
+    <th>+32 51 23 23 30</th>
+    <th>+32 51 22 82 58</th>
+    <th><a href="">bio.roeselare@vives.be</a></th>
+    <th><a href="https://www.vives.be/nl/biotechniek/biotechnologie">BIO</a></th>
   </tr>
   <tr>
-    <td>Torhout</td>
-    <td>Sint Jozefstraat 1<br>8820 Torhout</td>
-    <td>Education</td>
-    <td>+32 50 23 10 30</td>
-    <td>+32 50 23 10 31</td>
-    <td><a href="mailto:ond.torhout@vives.be">ond.torhout@vives.be</a></td>
-    <td><a href="https://google.com">Onderwijs</a></td>
+    <th>Torhout</th>
+    <th>Sint-Jozefstraat 1 8820 Torhout</th>
+    <th>Education</th>
+    <th>+32 50 23 10 30</th>
+    <th>+32 50 23 10 31</th>
+    <th><a href="">ond.torhout@vives.be</a></th>
+    <th><a href="https://www.vives.be/nl/onderwijs">Onderwijs</a></th>
   </tr>
-</tbody>
+  </tbody>
 </table>
 </body>
 </html>
-
