--- a/Labo 1/Labo1.html
+++ b/Labo 1/Labo1.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Labo1</title>
+    <title>Opdrachten Labo 1</title>
 </head>
 <body>
-<a></a>
-
+<h1>Opdrachten Labo 1</h1>
+<h2>Hier vind je de opdrachten van Labo 1 terug.</h2>
+<ul>
+    <li>Opdracht 1</li>
+    <a href="https://vivesonline-my.sharepoint.com/:w:/r/personal/r0944344_student_vives_be/_layouts/15/Doc.aspx?sourcedoc=%7BFFEA0D7E-B1E4-4EED-8B91-9E78FE62CEB6%7D&file=Labo1-Noah%20Dejager.docx&action=default&mobileredirect=true&login_hint=r0944344%40student.vives.be&ct=1665617501116&wdOrigin=OFFICECOM-WEB.MAIN.UPLOAD&cid=d48873f2-e468-4b73-9559-d5f57522ec90">Klik hier voor online-word weergave!</a>
+</ul>
 </body>
 </html>
