--- a/Labo 3/Labo 3 Opdrachten.html
+++ b/Labo 3/Labo 3 Opdrachten.html
@@ -13,6 +13,9 @@
     <li>Opdracht 2</li>
     <a href="https://noahdejager.github.io/Labo%203/Tabel%20contact%20information.html">Klik hier voor webpagina!</a>
     <a href="https://github.com/NoahDejager/NoahDejager.github.io/blob/main/Labo%203/Personal%20Homepage-opdracht.html">Klik hier om de code via github te raadplegen!</a>
+    <li>Opdracht 2b</li>
+    <a href="https://noahdejager.github.io/Labo%203/Personal%20Homepage%20Prognose.html">Klik hier voor webpagina!</a>
+    <a href="https://github.com/NoahDejager/NoahDejager.github.io/blob/main/Labo%203/Personal%20Homepage%20Prognose.html">Klik hier om de code via github te raadplegen!</a>
     <li>Opdracht 3</li>
     <a href="https://noahdejager.github.io/Labo%203/onderwijsaanbod-opdracht.html">Klik hier voor webpagina!</a>
     <a href="https://github.com/NoahDejager/NoahDejager.github.io/blob/main/Labo%203/onderwijsaanbod-opdracht.html">Klik hier om de code via github te raadplegen!</a>
