--- a/Labo 3/Personal Homepage Prognose.html
+++ b/Labo 3/Personal Homepage Prognose.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Dejager Noah</h1>
-<img src="https://www.kindpng.com/picc/m/661-6618518_pingu-the-penguin-pingu-waving-transparent-background-hd.png" width="250" </img>
+<img src="https://www.kindpng.com/picc/m/661-6618518_pingu-the-penguin-pingu-waving-transparent-background-hd.png" alt="Pingu" width="250"</img>
 <h2>Persoonlijke Informatie</h2>
 <ul>
   <li>Noah Dejager</li>
@@ -25,7 +25,7 @@
   </li>
   <li>Netflix Kijken
     <ul>
-      <li>Ik kijk graag eens naar een horrorfilm. dit doe ik meestal via het streamingplatform Netflix</li>
+      <li>Ik kijk graag eens naar een horrorfilm. Dit doe ik meestal via het streamingplatform Netflix</li>
       <a href="https://www.netflix.com">Netflix</a>
     </ul>
   </li>
@@ -35,14 +35,14 @@
     </ul>
   </li>
 </ol>
-<h2>Vind ik leuk</h2
+<h2>Vind ik leuk</h2>
 <ol>
   <li>Muziek luisteren
     <ul>
       <li>In mijn vrije tijd luister ik bijna altijd naar muziek. Ik luister graag naar Eminem. Mijn favoriete liedje is Stan.</li>
       <a href="https://www.youtube.com/channel/UCfM3zsQsOnfWNUppiycmBuw">Eminem</a>
 
-      <img src="https://www.biography.com/.image/t_share/MTQ3NjM5MTEzMTc5MjEwODI2/eminem_photo_by_dave_j_hogan_getty_images_entertainment_getty_187596325.jpg" width="200"</img>
+      <img src="https://www.biography.com/.image/t_share/MTQ3NjM5MTEzMTc5MjEwODI2/eminem_photo_by_dave_j_hogan_getty_images_entertainment_getty_187596325.jpg" alt="Eminem" width="200"</img>
     </ul>
   </li>
 </ol>
@@ -76,7 +76,6 @@
   </tr>
   </tbody>
 </table>
-</aside>
 
 
 </body>
