--- a/Labo 3/Personal Homepage-opdracht.html
+++ b/Labo 3/Personal Homepage-opdracht.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Noah Dejager</title>
 </head>
 <body>
 <h1>Dejager Noah</h1>
-<img src="https://www.kindpng.com/picc/m/661-6618518_pingu-the-penguin-pingu-waving-transparent-background-hd.png" width="250" </img>
+<img src="https://www.kindpng.com/picc/m/661-6618518_pingu-the-penguin-pingu-waving-transparent-background-hd.png" width="250" alt="Pingu">
 <h2>Persoonlijke Informatie</h2>
 <ul>
   <li>Noah Dejager</li>
-  <li>Albertpad 25, Deerlijk</li>
+  <li>Albert pad 25, Deerlijk</li>
   <li>0492785599</li>
   <li>r0944344@vives.student.be</li>
   </ul>
@@ -18,14 +18,14 @@
 <ol>
 <li>Fitness
   <ul>
-      <li>Ik vind Fitnessen zeer rustgeven en leuk.
+      <li>Ik vind Fitnessen zeer rustgevend en leuk.
       </li>
   <a href="https://www.basic-fit.com">Basic-Fit</a>
     </ul>
   </li>
   <li>Netflix Kijken
     <ul>
-      <li>Ik kijk graag eens naar een horrorfilm. dit doe ik meestal via het streamingplatform Netflix</li>
+      <li>Ik kijk graag eens naar een horrorfilm. Dit doe ik meestal via het streamingplatform Netflix</li>
       <a href="https://www.netflix.com">Netflix</a>
     </ul>
   </li>
@@ -35,16 +35,15 @@
     </ul>
   </li>
 </ol>
-<h2>Vind ik leuk</h2
+<h2>Vind ik leuk</h2>
   <ol>
   <li>Muziek luisteren
   <ul>
-    <li>In mijn vrije tijd luister ik bijna altijd naar muziek. Ik luister graag naar Eminem. Mijn favoriete liedje is Stan.</li>
-<a href="https://www.youtube.com/channel/UCfM3zsQsOnfWNUppiycmBuw">Eminem</a>
-
-<img src="https://www.biography.com/.image/t_share/MTQ3NjM5MTEzMTc5MjEwODI2/eminem_photo_by_dave_j_hogan_getty_images_entertainment_getty_187596325.jpg" width="200"</img>
-  </ul>
-
-
+    <li> In mijn vrije tijd luister ik bijna altijd naar muziek. Ik luister graag naar Eminem. Mijn favoriete liedje is Stan.</li>
+    <a href="https://www.youtube.com/channel/UCfM3zsQsOnfWNUppiycmBuw">Eminem</a>
+</ul>
+  </li>
+  </ol>
+<img src="https://www.biography.com/.image/t_share/MTQ3NjM5MTEzMTc5MjEwODI2/eminem_photo_by_dave_j_hogan_getty_images_entertainment_getty_187596325.jpg" width="200" alt="eminem">
 </body>
 </html>
