--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <li>p055555@vives.student.be</li>
 </ul>
 <h2>Handige links</h2>
-<a href="https://noahdejager.github.io/Labo4/Hobbies.html"> Hobbies</a>
+<a href="https://NoahDejager.github.io/Labo%204/Hobbies.html"> Hobbies</a>
+<br>
+<a href="https://NoahDejager.github.io/Labo%204/Likes.html"> Likes</a>
 </body>
 </html>
