--- a/Labo 3/Personal Homepage Prognose.html
+++ b/Labo 3/Personal Homepage Prognose.html
@@ -40,7 +40,7 @@
   <li>Muziek luisteren
     <ul>
       <li>In mijn vrije tijd luister ik bijna altijd naar muziek. Ik luister graag naar Eminem. Mijn favoriete liedje is Stan.</li>
-      <a href="https://www.youtube.com/channel/UCfM3zsQsOnfWNUppiycmBuw">Eminem</a>
+      <li><a href="https://www.youtube.com/channel/UCfM3zsQsOnfWNUppiycmBuw">Eminem</a></li>
 
       <img src="https://www.biography.com/.image/t_share/MTQ3NjM5MTEzMTc5MjEwODI2/eminem_photo_by_dave_j_hogan_getty_images_entertainment_getty_187596325.jpg" alt="Eminem" width="200"</img>
     </ul>
