--- a/Labo 7/Personal-homepage-css/index.html
+++ b/Labo 7/Personal-homepage-css/index.html
@@ -44,10 +44,10 @@
   </li>
 </ol>
 <h2>Vind ik leuk</h2>
-<ol>
+<ol >
   <li>Muziek luisteren
     <ul>
-      <li> In mijn vrije tijd luister ik bijna altijd naar muziek. Ik luister graag naar Eminem. Mijn favoriete liedje is Stan.</li>
+      <li class="hobbies"> In mijn vrije tijd luister ik bijna altijd naar muziek. Ik luister graag naar Eminem. Mijn favoriete liedje is Stan.</li>
       <a href="https://www.youtube.com/channel/UCfM3zsQsOnfWNUppiycmBuw">Eminem</a>
     </ul>
   </li>
