--- a/Labo 9/opdracht airbus/opdracht airbus/airbus.html
+++ b/Labo 9/opdracht airbus/opdracht airbus/airbus.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Airbus Webpagina</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -10,6 +11,7 @@
 		<p>AIRBUS - A380</p>
 		<p>Het grootste passagiersvliegtuig ter wereld </p>
 		<img src="fotos/tekklein.png" alt="tekening van vliegtuig" />
+
     </div>
 	
     <div> <!-- news -->
